--- a/GithubTests.ipynb
+++ b/GithubTests.ipynb
@@ -2,41 +2,45 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "What is your name? Colin\n",
-      "How old are you? 17\n"
+      "What is your name? Jackson\n",
+      "How old are you? 18\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Colin\n",
-      "You are 17 years old\n"
+      "Hello Jackson\n",
+      "You are 18 years old\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter an integer:  5\n",
-      "Enter a second integer:  20\n"
+      "Enter an integer:  50\n",
+      "Enter a second integer:  3\n",
+      "What city do you live in? Pittsburgh\n",
+      "What state do you live in? Pennsylvania\n",
+      "What country do you live in? USA\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The sum of your numbers is: 25\n",
-      "The difference of your numbers is: -15\n",
-      "The product of your numbers is: 100\n",
-      "The quotient of your numbers is: 0.25\n"
+      "You live in Pittsburgh, Pennsylvania, USA.\n",
+      "The sum of your numbers is: 53\n",
+      "The difference of your numbers is: 47\n",
+      "The product of your numbers is: 150\n",
+      "The quotient of your numbers is: 16.666666666666668\n"
      ]
     }
    ],
@@ -51,6 +55,12 @@
     "numberOne = int(numberOne)\n",
     "numberTwo = input(\"Enter a second integer: \")\n",
     "numberTwo = int(numberTwo)\n",
+    "\n",
+    "city = input(\"What city do you live in?\")\n",
+    "state = input(\"What state do you live in?\")\n",
+    "country = input(\"What country do you live in?\")\n",
+    "\n",
+    "print(\"You live in \"+ city + \", \" + state + \", \" + country + \".\")\n",
     "\n",
     "add = numberOne + numberTwo\n",
     "add = str(add)\n",
